[project]
name = "refrapy"
version = "0.2.1"
description = "Refrapy is a Python software package with a graphical interface for seismic refraction data analysis."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.13"
keywords = ["seismic refraction", "geophysics",]
authors = [
  { name = "Victor Guedes", email = "vjs279@hotmail.com"},
  { name = "Susanne Maciel", email = "susanne@unb.br" },
]
maintainers = [
    { name = "Marco Barbosa", email = "aureliobarbosa@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Science/Research", 
  "License :: OSI Approved :: MIT License",
]
dependencies = ["obspy>=1.3", "pygimli>=1.2", "numpy>=1.19", "scipy>=1.8.0","Pmw>=2.0"]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[project.scripts]
refrapy = "refrapy.__main__:main"

[project.urls]
Source = "https://github.com/AlgoSismos/Refrapy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.sdist]
include = [
  "*.gif",
  "*.png",
  "*.ico",
  "tests/", # include tests in the source distribution?
]

[tool.hatch.build.targets.wheel]
include = [
  "*.gif",
  "*.png",
  "*.ico",
  "tests/", # include tests in the wheel distribution?
]
